Margin Fix + Removing overflow

--- a/css/main.css
+++ b/css/main.css
@@ -326,8 +326,8 @@ nav.header ul li a {
 } 
 
 #nameTop{
-    margin-top: -100px;
-    font-size:8.5em;
+    margin-top: -40px;
+    font-size: 8.5em;
     letter-spacing: 8px;
     user-select: none;
 }
